--- a/SalesWebService/appsettings.json
+++ b/SalesWebService/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBContext": "Server=(localdb)\\sqlexpress;Database=SalesDB28Web;Trusted_Connection=True"
+    "DBContext": "Server=localhost\\sqlexpress;Database=SalesDB28Web;Trusted_Connection=True"
   }
 }
